fix style on small device

--- a/css/credentials.css
+++ b/css/credentials.css
@@ -56,9 +56,13 @@
 @media only screen and (max-width: 576px) {
     .custom-container {
         width: 100%;
-        border: 2px solid #FFAB00;
         padding: 24px;
         border-radius: 24px;
-        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        box-shadow: 0 8px 24px #C1C7D0;
+        margin: 0 16px;
     }
 }
